arc-script/arc-script-test/compile/src/snapshots/mlir@enum-pattern.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/enum-pattern.arc
---
module @toplevel {
    func @crate_x_3() -> () {
        return 
    }
    func @crate_main() -> () {
        %x_5 = arc.constant 5 : si32
        %x_6 = "arc.enwrap"%x_5 { variant = crate_Opt_Some } : si32 -> crate_Opt
        %x_7 = "arc.is"%x_6 { variant = crate_Opt_Some } : crate_Opt -> i1
        return 
    }
}

