arc-script/arc-script-test/compile/src/snapshots/mlir@ifs.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/ifs.arc

---
module @toplevel {
    func @crate_main() -> () {
        // No value
        return
    }

    func @crate_test() -> si32 {
        %x_1 = arc.constant 65 : si32
        %x_2 = arc.constant 66 : si32
        %x_3 = constant true
        %x_4 = "arc.if"(%x_3) ({
            "arc.block.result"(%x_1) : (si32) -> ()
        },{
            "arc.block.result"(%x_2) : (si32) -> ()
        }) : (i1) -> si32
        return %x_4 : si32
    }
}

