arc-script/arc-script-test/compile/src/snapshots/mlir@path.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/path.arc
---
module @toplevel {
    func @crate_main() -> () {
        %x_1 = arc.constant 1 : si32
        return 
    }
}

