arc-script/arc-script-test/compile/src/snapshots/rust@binops.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/binops.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub fn main() -> () {
    let y_1_0 = true;
    let y_1_1 = 127i8;
    let y_1_2 = 32767i16;
    let y_1_3 = 2147483647i32;
    let y_1_4 = 9223372036854775807i64;
    let y_1_5 = 255u8;
    let y_1_6 = 65535u16;
    let y_1_7 = 4294967295u32;
    let y_1_8 = 18446744073709551615u64;
    let y_1_9 = 340282350000000000000000000000000000000f32;
    let y_1_10 = 179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f64 ;
    let y_1_11 = 126i8;
    let y_1_12 = 32766i16;
    let y_1_13 = 2147483646i32;
    let y_1_14 = 9223372036854775806i64;
    let y_1_15 = 254u8;
    let y_1_16 = 65534u16;
    let y_1_17 = 4294967294u32;
    let y_1_18 = 18446744073709551614u64;
    let y_1_19 = 34028235000000000000000000000000000000f32;
    let y_1_20 = 179769313486231550000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f64 ;
    let y_1_21 = y_1_1 + y_1_1;
    let y_1_22 = y_1_2 + y_1_2;
    let y_1_23 = y_1_3 + y_1_3;
    let y_1_24 = y_1_4 + y_1_4;
    let y_1_25 = y_1_5 + y_1_5;
    let y_1_26 = y_1_6 + y_1_6;
    let y_1_27 = y_1_7 + y_1_7;
    let y_1_28 = y_1_8 + y_1_8;
    let y_1_29 = y_1_9 + y_1_9;
    let y_1_30 = y_1_10 + y_1_10;
    let y_1_31 = y_1_1 - y_1_1;
    let y_1_32 = y_1_2 - y_1_2;
    let y_1_33 = y_1_3 - y_1_3;
    let y_1_34 = y_1_4 - y_1_4;
    let y_1_35 = y_1_5 - y_1_5;
    let y_1_36 = y_1_6 - y_1_6;
    let y_1_37 = y_1_7 - y_1_7;
    let y_1_38 = y_1_8 - y_1_8;
    let y_1_39 = y_1_9 - y_1_9;
    let y_1_40 = y_1_10 - y_1_10;
    let y_1_41 = y_1_1 * y_1_1;
    let y_1_42 = y_1_2 * y_1_2;
    let y_1_43 = y_1_3 * y_1_3;
    let y_1_44 = y_1_4 * y_1_4;
    let y_1_45 = y_1_5 * y_1_5;
    let y_1_46 = y_1_6 * y_1_6;
    let y_1_47 = y_1_7 * y_1_7;
    let y_1_48 = y_1_8 * y_1_8;
    let y_1_49 = y_1_9 * y_1_9;
    let y_1_50 = y_1_10 * y_1_10;
    let y_1_51 = y_1_1 / y_1_1;
    let y_1_52 = y_1_2 / y_1_2;
    let y_1_53 = y_1_3 / y_1_3;
    let y_1_54 = y_1_4 / y_1_4;
    let y_1_55 = y_1_5 / y_1_5;
    let y_1_56 = y_1_6 / y_1_6;
    let y_1_57 = y_1_7 / y_1_7;
    let y_1_58 = y_1_8 / y_1_8;
    let y_1_59 = y_1_9 / y_1_9;
    let y_1_60 = y_1_10 / y_1_10;
    let y_1_61 = y_1_1 % y_1_1;
    let y_1_62 = y_1_2 % y_1_2;
    let y_1_63 = y_1_3 % y_1_3;
    let y_1_64 = y_1_4 % y_1_4;
    let y_1_65 = y_1_5 % y_1_5;
    let y_1_66 = y_1_6 % y_1_6;
    let y_1_67 = y_1_7 % y_1_7;
    let y_1_68 = y_1_8 % y_1_8;
    let y_1_69 = y_1_9 % y_1_9;
    let y_1_70 = y_1_10 % y_1_10;
    let y_1_71 = y_1_1 <= y_1_1;
    let y_1_72 = y_1_2 <= y_1_2;
    let y_1_73 = y_1_3 <= y_1_3;
    let y_1_74 = y_1_4 <= y_1_4;
    let y_1_75 = y_1_5 <= y_1_5;
    let y_1_76 = y_1_6 <= y_1_6;
    let y_1_77 = y_1_7 <= y_1_7;
    let y_1_78 = y_1_8 <= y_1_8;
    let y_1_79 = y_1_9 <= y_1_9;
    let y_1_80 = y_1_10 <= y_1_10;
    let y_1_81 = y_1_1 < y_1_1;
    let y_1_82 = y_1_2 < y_1_2;
    let y_1_83 = y_1_3 < y_1_3;
    let y_1_84 = y_1_4 < y_1_4;
    let y_1_85 = y_1_5 < y_1_5;
    let y_1_86 = y_1_6 < y_1_6;
    let y_1_87 = y_1_7 < y_1_7;
    let y_1_88 = y_1_8 < y_1_8;
    let y_1_89 = y_1_9 < y_1_9;
    let y_1_90 = y_1_10 < y_1_10;
    let y_1_91 = y_1_1 > y_1_1;
    let y_1_92 = y_1_2 > y_1_2;
    let y_1_93 = y_1_3 > y_1_3;
    let y_1_94 = y_1_4 > y_1_4;
    let y_1_95 = y_1_5 > y_1_5;
    let y_1_96 = y_1_6 > y_1_6;
    let y_1_97 = y_1_7 > y_1_7;
    let y_1_98 = y_1_8 > y_1_8;
    let y_1_99 = y_1_9 > y_1_9;
    let y_1_100 = y_1_10 > y_1_10;
    let y_1_101 = y_1_1 >= y_1_1;
    let y_1_102 = y_1_2 >= y_1_2;
    let y_1_103 = y_1_3 >= y_1_3;
    let y_1_104 = y_1_4 >= y_1_4;
    let y_1_105 = y_1_5 >= y_1_5;
    let y_1_106 = y_1_6 >= y_1_6;
    let y_1_107 = y_1_7 >= y_1_7;
    let y_1_108 = y_1_8 >= y_1_8;
    let y_1_109 = y_1_9 >= y_1_9;
    let y_1_110 = y_1_10 >= y_1_10;
    let y_1_111 = y_1_0 == y_1_0;
    let y_1_112 = y_1_1 == y_1_1;
    let y_1_113 = y_1_2 == y_1_2;
    let y_1_114 = y_1_3 == y_1_3;
    let y_1_115 = y_1_4 == y_1_4;
    let y_1_116 = y_1_5 == y_1_5;
    let y_1_117 = y_1_6 == y_1_6;
    let y_1_118 = y_1_7 == y_1_7;
    let y_1_119 = y_1_8 == y_1_8;
    let y_1_120 = y_1_9 == y_1_9;
    let y_1_121 = y_1_10 == y_1_10;
    let y_1_122 = y_1_0 != y_1_0;
    let y_1_123 = y_1_1 != y_1_1;
    let y_1_124 = y_1_2 != y_1_2;
    let y_1_125 = y_1_3 != y_1_3;
    let y_1_126 = y_1_4 != y_1_4;
    let y_1_127 = y_1_5 != y_1_5;
    let y_1_128 = y_1_6 != y_1_6;
    let y_1_129 = y_1_7 != y_1_7;
    let y_1_130 = y_1_8 != y_1_8;
    let y_1_131 = y_1_9 != y_1_9;
    let y_1_132 = y_1_10 != y_1_10;
    let y_1_133 = y_1_0 && y_1_0;
    let y_1_134 = y_1_0 || y_1_0;
    let y_1_135 = y_1_0 ^ y_1_0;
    let y_1_136 = y_1_1 & y_1_1;
    let y_1_137 = y_1_2 & y_1_2;
    let y_1_138 = y_1_3 & y_1_3;
    let y_1_139 = y_1_4 & y_1_4;
    let y_1_140 = y_1_5 & y_1_5;
    let y_1_141 = y_1_6 & y_1_6;
    let y_1_142 = y_1_7 & y_1_7;
    let y_1_143 = y_1_8 & y_1_8;
    let y_1_144 = y_1_1 | y_1_1;
    let y_1_145 = y_1_2 | y_1_2;
    let y_1_146 = y_1_3 | y_1_3;
    let y_1_147 = y_1_4 | y_1_4;
    let y_1_148 = y_1_5 | y_1_5;
    let y_1_149 = y_1_6 | y_1_6;
    let y_1_150 = y_1_7 | y_1_7;
    let y_1_151 = y_1_8 | y_1_8;
    let y_1_152 = y_1_1 ^ y_1_1;
    let y_1_153 = y_1_2 ^ y_1_2;
    let y_1_154 = y_1_3 ^ y_1_3;
    let y_1_155 = y_1_4 ^ y_1_4;
    let y_1_156 = y_1_5 ^ y_1_5;
    let y_1_157 = y_1_6 ^ y_1_6;
    let y_1_158 = y_1_7 ^ y_1_7;
    let y_1_159 = y_1_8 ^ y_1_8;
    let y_1_160 = y_1_9.powf(y_1_19);
    let y_1_161 = y_1_10.powf(y_1_20);
    let y_1_162 = ();
    y_1_162
}


