arc-script/arc-script-test/compile/src/snapshots/rust@enum-pattern-nested.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/enum-pattern-nested.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
#[arcorn::rewrite]
pub enum Baz {
    Baz_Some(i32),
    Baz_None(()),
}
#[arcorn::rewrite]
pub enum Foo {
    Foo_Bar(Baz),
    Foo_None(()),
}
pub fn x_5() -> () {
    ()
}
pub fn main() -> () {
    let x_0: Foo = arcorn::enwrap!(Foo_Bar, arcorn::enwrap!(Baz_Some, 5i32));
    if arcorn::is!(Foo_Bar, x_0) {
        let x_2: Baz = arcorn::unwrap!(Foo_Bar, x_0);
        if arcorn::is!(Baz_Some, x_2) {
            let x_4: i32 = arcorn::unwrap!(Baz_Some, x_2);
            ()
        } else {
            x_5()
        }
    } else {
        x_5()
    }
}


