arc-script/arc-script-test/compile/src/snapshots/rust@enum-pattern.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/enum-pattern.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
#[arcorn::rewrite]
pub enum Opt {
    Opt_Some(i32),
    Opt_None(()),
}
pub fn x_3() -> () {
    let y_1_0 = ();
    y_1_0
}
pub fn main() -> () {
    let y_1_0 = 5i32;
    let y_1_1 = arcorn::enwrap!(Opt_Some, y_1_0);
    let y_1_2 = arcorn::is!(Opt_Some, y_1_1);
    let y_1_3 = if y_1_2 {
        let y_2_0 = arcorn::unwrap!(Opt_Some, y_1_1);
        let y_2_1 = ();
        y_2_1
    } else {
        let y_2_0 = x_3();
        y_2_0
    };
    y_1_3
}


