arc-script/arc-script-test/compile/src/snapshots/rust@extern-fun.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-mlir-fail-todo/extern-fun.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub struct HandlerAdder<
    'i,
    'source,
    'timer,
    'channel,
    O: 'static + Operator,
    B: Backend,
    C: ComponentDefinition,
> {
    pub op: &'i mut O,
    pub ctx: &'i mut OperatorContext<'source, 'timer, 'channel, O, B, C>,
    pub timestamp: Option<u64>,
}
#[derive(ArconState)]
pub struct TaskAdder {}
fn Adder() -> OperatorBuilder<TaskAdder> {
    OperatorBuilder {
        constructor: Arc::new(move |b| TaskAdder {}),
        conf: Default::default(),
    }
}
impl Operator for TaskAdder {
    type IN = Struct5valuei32End;
    type OUT = Struct5valuei32End;
    type TimerState = ArconNever;
    type OperatorState = Self;
    fn handle_element(
        &mut self,
        elem: ArconElement<Self::IN>,
        ref mut ctx: OperatorContext<Self, impl Backend, impl ComponentDefinition>,
    ) -> OperatorResult<()> {
        let ArconElement { timestamp, data } = elem;
        let event = data.value;
        let mut handler = HandlerAdder {
            op: self,
            ctx,
            timestamp,
        };
        handler.handle(event);
        Ok(())
    }
    arcon::ignore_timeout!();
    arcon::ignore_persist!();
}
impl<'i, 'source, 'timer, 'channel, B: Backend, C: ComponentDefinition>
    HandlerAdder<'i, 'source, 'timer, 'channel, TaskAdder, B, C>
{
    fn handle(&mut self, event_0: i32) -> OperatorResult<()> {
        let y_1_0 = self.addition(event_0, event_0);
        let y_1_1 = self.emit(y_1_0);
        y_1_1;
        Ok(())
    }
    fn emit(&mut self, event_0: i32) {
        let data = Struct5valuei32End { value: event_0 };
        let elem = ArconElement {
            data,
            timestamp: self.timestamp,
        };
        self.ctx.output(elem);
    }
}
pub fn pipe(s_0: Stream<Struct5valuei32End>) -> Stream<Struct5valuei32End> {
    let y_1_0 = 1i32;
    let y_1_1 = increment(y_1_0);
    let y_1_2 = 2i32;
    let y_1_3 = y_1_1 == y_1_2;
    let y_1_4 = if y_1_3 {
        let y_2_0 = Adder();
        let y_2_1 = Stream::operator(s_0, y_2_0);
        y_2_1
    } else {
        let y_2_0 = Adder();
        let y_2_1 = Stream::operator(s_0, y_2_0);
        y_2_1
    };
    y_1_4
}
#[arcorn::rewrite]
#[derive(Copy)]
pub struct Struct5valuei32End {
    value: i32,
}


